--- a/wrappers/python/tox.ini
+++ b/wrappers/python/tox.ini
@@ -20,12 +20,13 @@ deps =
   flake8-comprehensions
   flake8-import-order
   pep8-naming
-commands = flake8 src tests setup.py
+commands = flake8 src tests setup.py ../../examples/python
 
 
 [testenv:black]
 skip_install = True
 deps =
+    click==8.0.4
     black==19.10b
 commands =
-    black --line-length 100 --target-version py36 --check --diff src tests setup.py
+    black --line-length 100 --target-version py36 --check --diff src tests setup.py ../../examples/python
