Fixed typo in sources variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ if(USE_FAST_TANH)
     add_definitions(-DZSF_USE_FAST_TANH)
 endif()
 
-set(ZFS_SOURCE_FILES
+set(ZSF_SOURCE_FILES
     include/zsf.h
     src/zsf.c
     src/dimr_bmi.c
@@ -72,7 +72,7 @@ set(ZFS_SOURCE_FILES
 ##############################################################################
 set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 
-add_library(zsf SHARED ${ZFS_SOURCE_FILES})
+add_library(zsf SHARED ${ZSF_SOURCE_FILES})
 
 set_target_properties (zsf PROPERTIES
     DEFINE_SYMBOL "ZSF_EXPORTS"
@@ -80,7 +80,7 @@ set_target_properties (zsf PROPERTIES
     PUBLIC_HEADER "include/zsf.h"
 )
 
-add_library(zsf-static STATIC ${ZFS_SOURCE_FILES})
+add_library(zsf-static STATIC ${ZSF_SOURCE_FILES})
 
 set_target_properties(zsf-static PROPERTIES
     COMPILE_DEFINITIONS "ZSF_STATIC"
@@ -95,7 +95,7 @@ set(INSTALL_TARGETS zsf zsf-static)
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
     # 64 bits - do nothing. 64 bits office can just use the regular dll
 elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-    add_library(zsf-stdcall SHARED ${ZFS_SOURCE_FILES})
+    add_library(zsf-stdcall SHARED ${ZSF_SOURCE_FILES})
 
     set_target_properties (zsf-stdcall PROPERTIES
         DEFINE_SYMBOL "ZSF_EXPORTS"
