Moved 'global' config of locks to a structure and header.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,8 @@ set(ZSF_SOURCE_FILES
     src/sealock.c
     src/ini.h
     src/ini.c
+    src/zsf_config.h
+    src/zsf_config.c
 )
 
 ##############################################################################
