Replaced all double typed timestamps with time_t.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,8 @@ set(ZSF_SOURCE_FILES
     src/load_time_averaged.c
     src/sealock.h
     src/sealock.c
+    src/timestamp.h
+    src/timestamp.c
     src/ini/ini_read.h
     src/ini/ini_read.c
     src/zsf_config.h
