Added skeleton unittest for load_csv.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,3 +17,7 @@ add_test(test_dimr_bmi test_dimr_bmi)
 add_executable(test_io_layer_distribution test_io_layer_distribution.c)
 target_link_libraries(test_io_layer_distribution PRIVATE test_dependencies)
 add_test(test_io_layer_distribution test_io_layer_distribution)
+
+add_executable(test_load_csv test_load_csv.c)
+target_link_libraries(test_load_csv PRIVATE test_dependencies)
+add_test(test_load_csv test_load_csv)
