Added example of list value in ini test.

--- a/tests/test_ini_input.ini
+++ b/tests/test_ini_input.ini
@@ -15,5 +15,6 @@ novaluegiven =
 novalue_only_comment =  ; no value
     lots_of_spaces    =      234.5
 attribute : 42
+list_variable = 1, 1, 2, 3, 5, 8
 #disabled = yes
 ;disabled = also
